# WorksInProgress

./: .gitignore  .gitmodules  NOTES.md  README.md  TESTING.md  THANKS.md  TODO.md  bounce.js  config.toml  configure.js  daw.service.js  make.js  osc-bridge.js  package-lock.json  package.json  tsconfig.json  watch.js  webpack-dev.js  webpack-prod.js
BabylonJs/: app.ts  audio-3dof.ts  audio-6dof.ts  audio-csound.ts  audio-daw.ts  index-dev.html  index-prod.html  index.html  notes.md  playgrounds.md  project.csd.ts  project.ts  stats.md
Config/: svgo.config.js
Csound/: CMakeLists.txt
Csound/Common/: Common.cmake  CommonSynth.cmake  synth-before-include-guard.h.orc  synth-inside-include-guard.h.orc  synth.h.csd  synth.instr.h.orc  watchOrcFile.orc
Csound/DawPlayback/: DawPlayback.csd  NormalizeAndSplitSpatialMixdown.csd
Csound/DawService/: DawService.cmake  DawService.csd  ReloadOrcFiles.cmake  ReloadOrcFiles.csd
Csound/Effects/: BusHead.cmake  BusHead.csd  MasterHead.cmake  MasterHead.csd  Reverb.cmake  Reverb.csd  Reverb.orc  Spatializer.cmake  Spatializer.csd  Spatializer.orc  Spatializer.ui
Csound/Synths/: CircleSynth.cmake  DistanceDelaySynth.orc  GroundBubbleSynth.cmake  GroundBubbleSynth.orc  PointSynth.cmake  PointSynth.notemap.txt  PointSynth.orc  PowerLineSynth.cmake  PowerLineSynth.orc  Saw1RimSynth.cmake  Saw1RimSynth.orc  Saw2FlyerSynth.cmake  Saw2FlyerSynth.csd  Saw2FlyerSynth.orc  Saw2FlyerSynth.ui  Saw2FlyerSynth_ccIndexes.orc  Saw2FlyerSynth_global.orc  Saw2FlyerSynth_instr_1_head.orc  SubtractiveSynthFilter.ui  SubtractiveSynthOsc.ui  TR_808.cmake  TR_808.csd  TR_808.orc  Triangle1Synth.cmake  Triangle1Synth.csd  Triangle1Synth.orc  Triangle2Synth.cmake  Triangle2Synth.csd  Triangle2Synth.orc  Triangle3MonoSynth.cmake  Triangle3MonoSynth.csd  Triangle3MonoSynth.orc  Triangle4BassMonoSynth.cmake  Triangle4BassMonoSynth.csd  Triangle4BassMonoSynth.orc  TriangleMonoSynth.h.orc  TriangleUdoTriggerSynth.cmake  TriangleUdoTriggerSynth.orc  _TemplateSynth.cmake  _TemplateSynth.csd  (+1 more)
Csound/Synths/Common/: FlyerPath.cmake  FlyerPath.orc  FlyerPaths.cmake  FlyerPaths.orc  RimMesh.cmake  RimMesh.orc  TriangleMonoSynth.in-include-guard.orc  TriangleMonoSynth.init.orc  TriangleMonoSynth.instr.orc
Csound/Udos/: EffectUdos.cmake  PositionUdos.cmake  PositionUdos.orc  SynthUdos.cmake
Csound/Udos/EffectUdos/: HighPassFilter.h.orc
Csound/Udos/PositionUdos/: RandomPosition1.orc  circleXZ_1.orc  circle_XZ.orc  randomPosition1.orc  randomPosition2.orc  randomPosition3.orc  randomPosition4.orc  randomXZ_1.orc  random_XZ.orc  rayXZ_1_pp.orc  ray_XZ.orc
Csound/Udos/SynthUdos/: TriangleUdo1.h.orc
CsoundCMake/: CsoundCMake.cmake
Logs/: test-log.md
Projects/: .gitignore  CMakeLists.txt  Projects.cmake  build.prod.mjs  clean.prod.mjs  project.cmake
Projects/ProofOfConcept/Csound/: .gitattributes  .gitignore  CMakeLists.txt  DawService.csd  Playback.csd
Projects/ProofOfConcept/Csound/Common/: watchOrcFile.orc
Projects/ProofOfConcept/Csound/DawPlayback/: DawPlayback--test.csd.js  DawPlayback.csd
Projects/ProofOfConcept/Csound/DawService/: DawService.cmake  DawService.csd
Projects/ProofOfConcept/Csound/Effects/: BusHead.cmake  BusHead.csd  BusHead.orc  MasterHead.cmake  MasterHead.csd  Reverb.cmake  Reverb.csd  Reverb.orc
Projects/ProofOfConcept/Csound/Synths/: CircleSynth.cmake  CircleSynth.csd  CircleSynth.orc  CircleSynthBenchmark.csd  DistanceDelaySynth.cmake  DistanceDelaySynth.csd  DistanceDelaySynth.orc  GroundBubbleSynth.orc  PointSynth.cmake  PointSynth.csd  PointSynth.orc  PowerLineSynth.cmake  PowerLineSynth.csd  PowerLineSynth.orc  SubtractiveSynth.cmake  SubtractiveSynth.csd  SubtractiveSynth.orc  SubtractiveSynthOsc.ui  TableSynth.cmake  TableSynth.csd  TableSynth.orc
Projects/ProofOfConcept/Csound/Testing/: Testing.cmake  Testing.csd
Projects/ProofOfConcept/Csound/Testing/069e83fd-1c94-47e9-95ec-126e0fbefec3/: exists.json
Projects/ProofOfConcept/Csound/Testing/b4f7a35c-6198-422f-be6e-fa126f31b007/: exists.json
Projects/ProofOfConcept/Csound/Testing/baeea327-af4b-4b10-a843-6614c20ea958/: exists.json
Projects/ProofOfConcept/Csound/Tools/: TableEditor.csd
ReaperProjects/: 211106_1_PrimitiveTriangles.rpp  211112_1_PrimitiveTriangles.rpp  211214_1_PrimitiveTriangles.rpp  21_02_08__1.rpp  21_02_13__1.rpp  21_03_29__1_AutoReloadTesting.RPP  21_07_27__1.RPP  21_08_07__1.RPP  (+3 more)
(+235 files in other folders)
